Bug 369881 - managertest and activeconnectiontest fail
Summary: managertest and activeconnectiontest fail
Status: RESOLVED FIXED
Alias: None
Product: frameworks-networkmanager-qt
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Exherbo Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-04 15:51 UTC by Heiko Becker
Modified: 2016-10-05 09:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Becker 2016-10-04 15:51:33 UTC
With networkmanager-qt 5.27.0-rc1 and NetworkManager-1.4.2 managertest and activeconnectiontest fail (output below), while they pass with 5.26.0.

1: Test command: /home/heiko/Quelltexte/exherbo/git-sources/frameworks/networkmanager-qt/build/autotests/managertest
1: Test timeout computed to be: 9.99988e+06
1: ********* Start testing of ManagerTest *********
1: Config: Using QtTest library 5.7.0, Qt 5.7.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 6.1.0)
1: PASS   : ManagerTest::initTestCase()
1: QWARN  : ManagerTest::testDevices() networkmanager-qt: void NetworkManager::NetworkManagerPrivate::propertiesChanged(const QVariantMap&) Unhandled property "Devices"
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "NetworkingEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "WimaxEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "WimaxHardwareEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "WirelessEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "WirelessHardwareEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "WwanEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: "WwanHardwareEnabled" true
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: Device list
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: Connections list
1: QDEBUG : ManagerTest::testDevices() networkmanager-qt: Connections list
1: QWARN  : ManagerTest::testDevices() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "Carrier"
1: QWARN  : ManagerTest::testDevices() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "HwAddress"
1: QWARN  : ManagerTest::testDevices() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "PermHwAddress"
1: QWARN  : ManagerTest::testDevices() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "Speed"
1: PASS   : ManagerTest::testDevices()
1: FAIL!  : ManagerTest::testManager() 'wirelessEnabledChanged.wait()' returned FALSE. ()
1:    Loc: [/home/heiko/Quelltexte/exherbo/git-sources/frameworks/networkmanager-qt/autotests/managertest.cpp(105)]
1: PASS   : ManagerTest::cleanupTestCase()
1: Totals: 3 passed, 1 failed, 0 skipped, 0 blacklisted, 5278ms
1: ********* Finished testing of ManagerTest *********
 1/25 Test  #1: managertest ......................***Failed    5.31 sec


3: Test command: /home/heiko/Quelltexte/exherbo/git-sources/frameworks/networkmanager-qt/build/autotests/activeconnectiontest
3: Test timeout computed to be: 9.99988e+06
3: ********* Start testing of ActiveConnectionTest *********
3: Config: Using QtTest library 5.7.0, Qt 5.7.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 6.1.0)
3: QWARN  : ActiveConnectionTest::initTestCase() networkmanager-qt: void NetworkManager::NetworkManagerPrivate::propertiesChanged(const QVariantMap&) Unhandled property "Devices"
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "NetworkingEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "WimaxEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "WimaxHardwareEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "WirelessEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "WirelessHardwareEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "WwanEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: "WwanHardwareEnabled" true
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: Device list
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt:    "/org/kde/fakenetwork/Devices/0"
3: QWARN  : ActiveConnectionTest::initTestCase() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "Carrier"
3: QWARN  : ActiveConnectionTest::initTestCase() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "HwAddress"
3: QWARN  : ActiveConnectionTest::initTestCase() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "PermHwAddress"
3: QWARN  : ActiveConnectionTest::initTestCase() networkmanager-qt: virtual void NetworkManager::DevicePrivate::propertyChanged(const QString&, const QVariant&) Unhandled property "Speed"
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: Connections list
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt: Connections list
3: QDEBUG : ActiveConnectionTest::initTestCase() networkmanager-qt:   "/org/kde/fakenetwork/Settings/0"
3: FAIL!  : ActiveConnectionTest::initTestCase() 'availableConnectionAppearedSpy.wait()' returned FALSE. ()
3:    Loc: [/home/heiko/Quelltexte/exherbo/git-sources/frameworks/networkmanager-qt/autotests/activeconnectiontest.cpp(79)]
3: PASS   : ActiveConnectionTest::cleanupTestCase()
3: Totals: 1 passed, 1 failed, 0 skipped, 0 blacklisted, 4986ms
3: ********* Finished testing of ActiveConnectionTest *********
 3/25 Test  #3: activeconnectiontest .............***Failed    5.03 sec
Comment 1 Jan Grulich 2016-10-05 09:46:15 UTC
Git commit cc9d198676e8c8afae9e55286bd401f40634ce6b by Jan Grulich.
Committed on 05/10/2016 at 09:46.
Pushed by grulich into branch 'master'.

Fix unit tests

In case we build against NetworkManager 1.4.x, we have to avoid using
o.f.DBus.Properties interface for monitoring property changes, because
our FakeNetwork doesn't support that yet.

M  +7    -0    src/activeconnection.cpp
M  +10   -0    src/manager.cpp
M  +6    -0    src/wireddevice.cpp
M  +7    -0    src/wirelessdevice.cpp

http://commits.kde.org/networkmanager-qt/cc9d198676e8c8afae9e55286bd401f40634ce6b