Fix unit tests

In case we build against NetworkManager 1.4.x, we have to avoid using
o.f.DBus.Properties interface for monitoring property changes, because
our FakeNetwork doesn't support that yet.

BUG:369881